--- a/TypeScriptDemo/style/app.css
+++ b/TypeScriptDemo/style/app.css
@@ -79,17 +79,99 @@ ul {
     width: 400px;
     height: 260px;
     border: 1px inset;
-    background: #000;
+    background: #333;
     padding: 10px;
     transform: translate3d(0,0,0);
-    overflow-x: hidden;
-    overflow-y: auto;
+    overflow: hidden;
+    cursor: zoom-in;
+
+}
+
+.code-wrapper.modal {
+    position: fixed;
+    z-index: 100;
+    margin: auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: calc(100% - 100px);
+    height: calc(100% - 100px);
+    display: block;
+    cursor: default;
+    transition: width 0.5s, height 0.5s;
+    border: #000;
+    padding: 50px;
+    background: transparent;
+}
+
+.code-wrapper > .close-button {
+    display: none;
+    position: absolute;
+    top: 2px;
+    right: 5px;
+    font-size: 2.0em;
+    color: #fff;
+    cursor: pointer;
+}
+
+.code-wrapper > .backdrop {
+    display: none;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.8);
+    z-index: -1;
+}
+
+.code-wrapper.modal > .backdrop {
+    display: block;
+}
+
+.code-wrapper > .close-button:hover {
+    color: #f00;
+}
+
+.code-wrapper.modal > .close-button {
+    display: block;
 }
 
 code {
     display: block;
+    position: relative;
     color: lime;
     white-space: pre;
+    overflow: hidden;
+}
+
+.console-wrapper {
+    position: relative;
+    background: #333;
+    border: 1px inset;
+    padding: 10px;
+    width: 640px;
+    margin: 0 auto;
+}
+
+.console-wrapper > code {
+    display: block;
+}
+
+.console-wrapper > i {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    color: #fff;
+    cursor: pointer;
+}
+
+.code-wrapper.modal > code {
+    overflow: auto;
+    max-height: 100%;
+    border: 2px solid #fff;
+    background: #333;
+    font-size: 1.75em;
 }
 
 @keyframes grind-up {
@@ -158,6 +240,116 @@ code {
     }
 }
 
+.rainbow-code {
+    margin: 0;
+    padding: 0;
+    display: block;
+    overflow: hidden;
+    background-color: #000;    
+}
+
+.rainbow-code.red {
+    color: #f00;
+}
+
+.rainbow-code.red.saturate {
+    transition: background-color 0.5s ease-in;
+    background-color: #f00;
+}
+
+.rainbow-code.orange {
+    color: #fa0;
+}
+
+.rainbow-code.orange.saturate {
+    transition: background-color 0.5s ease-in;
+    background-color: #fa0;
+}
+
+.rainbow-code.yellow {
+    color: #ff0;
+}
+
+.rainbow-code.yellow.saturate {
+    transition: background-color 0.5s ease-in;
+    background-color: #ff0;
+}
+
+.rainbow-code.green {
+    color: #4f3;
+}
+
+.rainbow-code.green.saturate {
+    transition: background-color 0.5s ease-in;
+    background-color: #4f3;
+}
+
+.rainbow-code.blue {
+    color: #15f;
+}
+
+.rainbow-code.blue.saturate {
+    transition: background-color 0.5s ease-in;
+    background-color: #15f;
+}
+
+.rainbow-code.purple {
+    color: #a0f;
+}
+
+.rainbow-code.purple.saturate {
+    transition: background-color 0.5s ease-in;
+    background-color: #a0f;
+}
+
+.rainbow-out {
+    transform-origin: left top;
+    transform-style: flat;
+    animation-name: out-rainbow;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
+}
+
+@keyframes out-rainbow {
+    0%   {
+        transform: translate(0px, 0px);
+    }
+
+    100% {
+        transform: translate(calc(100% + 25px), 0px);
+    }
+}
+
+.rainbow-road {
+    display: block;
+    position: relative;
+    height: 282px;
+    background: green;
+    margin-top: 26px;
+}
+
+.rainbow-code.road {
+
+}
+
+.rainbow-in {
+    transform-origin: left top;
+    transform-style: flat;
+    animation-name: in-rainbow;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
+}
+
+@keyframes in-rainbow {
+    0%   {
+        transform: translate(calc(-100% - 25px), 0px);
+    }
+
+    100% {
+        transform: translate(0px, 0px);      
+    }
+}
+
 table {
     margin: 0 auto;
 }
@@ -192,6 +384,11 @@ table {
     display: block;
     position: relative;
     height: 220px;
+}
+
+.transpile-wrapper > input {
+    display: block;
+    margin: 0 auto;
 }
 
 .img-grinder-handle {
@@ -229,7 +426,7 @@ table {
     margin: 0px 20px;
 }
 
-.page-section.reading {
+.page-section.reading > p {
     font-size: 1.5em;
 }
 
@@ -238,10 +435,25 @@ table {
     padding: 0px;
 }
 
+.page-section h4 {
+    margin: 10px 0px 10px 10px;
+    padding: 0px;
+}
+
+.page-section p {
+    margin: 10px 0px 10px 10px;
+    padding: 0px;
+}
+
 .page-section a {
     text-decoration: none;
     color: #00d3d3;
-    text-shadow: 1px 1px 2px #000;
+    text-shadow: 1px 1px 1px #000;
+}
+
+.page-section.reading img {
+    display: block;
+    margin: 10px auto;
 }
 
 .icon-disabled {
@@ -264,4 +476,205 @@ table {
     display: list-item;
     list-style-type: square;   
     color: #00d3d3; 
+}
+
+.example-interface-indexer-result {
+    display: block;
+    width: 400px;
+    height: 260px;
+    background: #333;
+    padding: 10px;
+    border: 1px inset;
+    position: relative;
+}
+
+.example-interface-indexer-result > input {
+    position: absolute;
+    display: block;
+    bottom: 5px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.img-wrapper {
+    display: block;
+    width: 640px;
+    margin: 0 auto;
+}
+
+.img-wrapper > img {
+    width: 640px;
+    cursor: zoom-in;
+}
+
+.img-wrapper.modal > img {
+    display: block;
+    width: 75%;
+    cursor: default;
+    transition: width 0.3s, height 0.3s;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.img-wrapper.modal {
+    position: fixed;
+    z-index: 100;
+    margin: auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: calc(100% - 100px);
+    height: calc(100% - 100px);
+    display: block;
+    cursor: default;    
+    border: #000;
+    padding: 50px;
+    background: transparent;
+}
+
+.img-wrapper > .close-button {
+    display: none;
+    position: absolute;
+    top: 2px;
+    right: 5px;
+    font-size: 2.0em;
+    color: #fff;
+    cursor: pointer;
+}
+
+.img-wrapper > .close-button:hover {
+    color: #f00;
+}
+
+.img-wrapper.modal > .close-button {
+    display: block;
+}
+
+.img-wrapper > .backdrop {
+    display: none;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.8);
+    z-index: -1;
+}
+
+.img-wrapper.modal > .backdrop {
+    display: block;
+}
+
+.copy-notification {
+    display: block;
+    opacity: 1;
+    position: absolute;
+    left: calc(100% - 10px);
+    top: -1.5em;
+    transform: translateX(-100%);
+    padding: 5px 10px;
+    border-radius: 5px; 
+    white-space: nowrap;
+    font-size: 1em;
+}
+
+.copy-notification.hidden {
+    display: none;
+}
+
+.copy-notification.success {
+    opacity: 0;
+    background: rgba(39, 180, 26, 0.9);
+    color: #fff;
+    text-shadow: 1px 1px 1px #333;    
+    animation: fade-notification;
+    animation-duration: 2.5s;
+    animation-iteration-count: 1;
+}
+
+.copy-notification.error {
+    opacity: 0;
+    background: rgba(255, 0, 0, 0.9);
+    color: #fff;
+    text-shadow: 1px 1px 1px #333;    
+    animation: fade-notification;
+    animation-duration: 2.5s;
+    animation-iteration-count: 1;
+}
+
+@keyframes fade-notification {
+    0% {
+        opacity: 1;
+    }
+
+    80% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
+.copy-notification > i {
+    margin-left: 10px;
+}
+
+.box {
+    display: block;
+    margin: 100px auto;
+    width: 400px;
+    height: 400px;
+}
+
+.triangle-up {
+    display: block;
+    position: absolute;
+	width: 0;
+	height: 0;
+	border-left: calc(50%) solid transparent;
+	border-right: calc(50%) solid transparent;
+	border-bottom: calc(100%) solid lime;
+}
+
+.triangle-down {
+    display: block;
+    position: absolute;
+	width: 0;
+	height: 0;
+	border-left: calc(50%) solid transparent;
+	border-right: calc(50%) solid transparent;
+	border-top: calc(100%) solid lime;
+}
+
+.jasmine-container {
+    display: block;
+    position: relative;
+}
+
+.jasmine-container > .reload-icon {
+    font-size: 24px;
+    position: absolute;
+    top: -40px;
+    right: 10px;
+    color: #2cc30f;
+    text-shadow: 1px 1px 1px #000;
+    cursor: pointer;
+}
+
+.jasmine-frame {
+    width: 100%;
+    height: 500px;
+}
+
+.logo-img {
+    display: inline-block;
+    text-align: left;
+    margin: 0;  
+}
+
+.logo-img > img {
+    margin: 0 !important;
 }
