--- a/TypeScriptDemo/style/app.css
+++ b/TypeScriptDemo/style/app.css
@@ -98,7 +98,7 @@ ul {
     height: calc(100% - 100px);
     display: block;
     cursor: default;
-    transition: width 0.5s, height 0.5s;
+    transition: width 0.25s, height 0.25s;
     border: #000;
     padding: 50px;
     background: transparent;
@@ -142,7 +142,7 @@ code {
     position: relative;
     color: lime;
     white-space: pre;
-    overflow: hidden;
+    overflow: hidden !important;
 }
 
 .console-wrapper {
@@ -167,7 +167,7 @@ code {
 }
 
 .code-wrapper.modal > code {
-    overflow: auto;
+    overflow: auto !important;
     max-height: 100%;
     border: 2px solid #fff;
     background: #333;
@@ -677,4 +677,22 @@ table {
 
 .logo-img > img {
     margin: 0 !important;
+}
+
+.my-first-app-result {
+    display: inline-block;
+    width: 420px;
+    height: 280px;
+    border: 1px inset;
+    background: #333;
+    padding: 0px;
+    transform: translate3d(0,0,0);
+    overflow: hidden;
+    cursor: zoom-in;
+}
+
+.my-first-app-result > iframe {
+    width: 100%;
+    height: 100%;
+    border: 0;
 }
