--- a/TypeScriptDemo/style/app.css
+++ b/TypeScriptDemo/style/app.css
@@ -696,3 +696,36 @@ table {
     height: 100%;
     border: 0;
 }
+
+.field-container {
+    display: block;
+    position: relative;
+    width: 800px;
+    height: 200px;
+}
+
+.field-grass {
+
+}
+
+.field-fence {
+
+}
+
+.sheep {
+    background: url(img/sheep.png);
+    background-size: 80px 60px;
+    background-repeat: no-repeat;
+    width: 80px;
+    height: 60px;
+    display: block;
+    position: absolute;
+}
+
+.cow {
+
+}
+
+.wolf {
+
+}
